Bit of refactoring/renaming. Getting setup for nuget

--- a/Spideyweb.Umbraco.SimpleTimePicker/App_Plugins/Spideyweb.Umbraco.SimpleTimePicker/views/editor.html
+++ b/Spideyweb.Umbraco.SimpleTimePicker/App_Plugins/Spideyweb.Umbraco.SimpleTimePicker/views/editor.html
@@ -1,4 +1,4 @@
-﻿<div class="umb-editor umb-datepicker" ng-controller="Spidey.SimpleTimePicker.Controller">
+﻿<div class="umb-editor umb-datepicker" ng-controller="Spideyweb.Umbraco.SimpleTimePicker.Controller">
     <ng-form name="datePickerForm">
         <div class="input-append date datepicker" style="position: relative;" id="datepicker{{model.alias}}">
 
